--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "http-server": "^0.9.0",
+    "jwt-simple": "^0.5.1",
+    "lodash": "^4.17.2",
     "mongodb": "^2.2.12",
     "mongoose": "^4.7.1",
+    "path": "^0.12.7",
     "q": "^1.4.1",
     "underscore": "^1.8.3"
   },
@@ -45,7 +48,7 @@
   },
   "config": {
     "commitizen": {
-        "path": "node_modules/cz-conventional-changelog"
+      "path": "node_modules/cz-conventional-changelog"
     }
   }
 }
