feat(Implemented Test AutoEmail):

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lodash": "^4.17.2",
     "mongodb": "^2.2.12",
     "mongoose": "^4.7.1",
+    "nodemon": "^1.11.0",
     "path": "^0.12.7",
     "q": "^1.4.1",
     "underscore": "^1.8.3"
