--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lodash": "^4.17.2",
     "mongodb": "^2.2.12",
     "mongoose": "^4.7.1",
+    "ng-file-upload": "^12.2.13",
     "nodemailer": "^2.7.0",
     "nodemon": "^1.11.0",
     "path": "^0.12.7",
