--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular": "^1.5.9",
     "angular-route": "^1.5.9",
     "angular-ui-bootstrap": "^2.3.1",
+    "angular-ui-mask": "^1.8.7",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
     "bcrypt-nodejs": "0.0.3",
